Fix button color sticking on IE
[#87262100]

--- a/app/styles/dragon-meiosis-view.styl
+++ b/app/styles/dragon-meiosis-view.styl
@@ -16,6 +16,10 @@
       width: 38px
       height: 38px
       padding: 5px
+      &:hover
+        // This is dumb, but it prevents the buttons from sticking in an active color on IE
+        width: 38px
+
   .scrub
     width: 125px
     display: inline-block
